salesforce/force-app/main/default/objects/WFC27_Settings__c/WFC27_Settings__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><label>WFC27 Settings</label><nameField><label>Settings Name</label><type>Text</type></nameField><pluralLabel>WFC27 Settings</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>