salesforce/force-app/main/default/objects/WFC27_Settings__c/fields/Batch_Size__c.field-meta.xml
<CustomField><fullName>Batch_Size__c</fullName><label>Items Per Train</label><precision>4</precision><scale>0</scale><type>Number</type></CustomField>