salesforce/force-app/main/default/objects/WFC27_Settings__c/fields/Empty_Sync_Retention_Days__c.field-meta.xml
<CustomField><fullName>Empty_Sync_Retention_Days__c</fullName><defaultValue>7</defaultValue><label>Empty Sync Retention Days</label><precision>4</precision><scale>0</scale><type>Number</type></CustomField>