salesforce/force-app/main/default/objects/WFC27_Settings__c/fields/Failed_Sync_Retention_Days__c.field-meta.xml
<CustomField><fullName>Failed_Sync_Retention_Days__c</fullName><defaultValue>365</defaultValue><label>Failed Sync Retention Days</label><precision>4</precision><scale>0</scale><type>Number</type></CustomField>