salesforce/force-app/main/default/objects/WFC27_Settings__c/fields/Last_Base_Sync_At__c.field-meta.xml
<CustomField><fullName>Last_Base_Sync_At__c</fullName><label>Last Base Sync At</label><type>DateTime</type></CustomField>