salesforce/force-app/main/default/objects/WFC27_Settings__c/fields/Last_Error__c.field-meta.xml
<CustomField><fullName>Last_Error__c</fullName><label>Last Transport Error</label><length>32768</length><type>LongTextArea</type><visibleLines>6</visibleLines></CustomField>