salesforce/force-app/main/default/objects/WFC27_Settings__c/fields/Last_Scan_At__c.field-meta.xml
<CustomField><fullName>Last_Scan_At__c</fullName><label>Last Scan At</label><type>DateTime</type></CustomField>