salesforce/force-app/main/default/objects/WFC27_Settings__c/fields/Last_Tick_At__c.field-meta.xml
<CustomField><fullName>Last_Tick_At__c</fullName><label>Last Train At</label><type>DateTime</type></CustomField>