salesforce/force-app/main/default/objects/WFC27_Settings__c/fields/Packet_Sync_Retention_Days__c.field-meta.xml
<CustomField><fullName>Packet_Sync_Retention_Days__c</fullName><defaultValue>90</defaultValue><label>Packet Sync Retention Days</label><precision>4</precision><scale>0</scale><type>Number</type></CustomField>