salesforce/force-app/main/default/objects/WFC27_Settings__c/fields/Train_Paused__c.field-meta.xml
<CustomField><fullName>Train_Paused__c</fullName><label>Train Paused</label><type>Checkbox</type><defaultValue>false</defaultValue></CustomField>